fix hero page \

--- a/index.html
+++ b/index.html
@@ -2,36 +2,73 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <title>Tuyliyev Elyor - Software Engineer Portfolio</title>
+    <title>Elyor Tuyliyev | Web Developer Portfolio</title>
     <meta
       name="description"
-      content="Professional portfolio of Tuyliyev Elyor, Software Engineer specializing in JavaScript and React with 1.5+ years of experience."
+      content="Elyor Tuyliyev is a web developer and software engineer building fast, responsive, and conversion-focused React + TypeScript products."
     />
-    <meta name="author" content="Tuyliyev Elyor" />
+    <meta
+      name="keywords"
+      content="Elyor Tuyliyev, Web Developer, Frontend Developer, React Developer, TypeScript, JavaScript, Portfolio"
+    />
+    <meta name="author" content="Elyor Tuyliyev" />
+    <meta name="robots" content="index, follow, max-image-preview:large" />
+    <meta name="googlebot" content="index,follow" />
+    <meta name="theme-color" content="#020617" />
+    <link rel="canonical" href="/" />
 
+    <meta property="og:locale" content="en_US" />
     <meta
       property="og:title"
-      content="Tuyliyev Elyor - Software Engineer Portfolio"
+      content="Elyor Tuyliyev | Web Developer Portfolio"
     />
     <meta
       property="og:description"
-      content="Professional portfolio of Tuyliyev Elyor, Software Engineer specializing in JavaScript and React with 1.5+ years of experience."
+      content="Web developer portfolio focused on modern React, TypeScript, performance, and business-driven frontend products."
     />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:image"
-      content="https://lovable.dev/opengraph-image-p98pqg.png"
-    />
+    <meta property="og:site_name" content="Elyor Tuyliyev Portfolio" />
+    <meta property="og:url" content="/" />
+    <meta property="og:image" content="/og-image.jpg" />
+    <meta property="og:image:alt" content="Elyor Tuyliyev web developer portfolio cover image" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:title" content="Elyor Tuyliyev | Web Developer Portfolio" />
     <meta
-      name="twitter:image"
-      content="https://lovable.dev/opengraph-image-p98pqg.png"
+      name="twitter:description"
+      content="Web developer portfolio with React and TypeScript projects, experience, and direct contact."
     />
+    <meta name="twitter:image" content="/og-image.jpg" />
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Elyor Tuyliyev",
+        "jobTitle": "Web Developer",
+        "description": "Software engineer focused on React, TypeScript, and high-performance frontend products.",
+        "email": "mailto:elyor.tuyliyev@gmail.com",
+        "telephone": "+998884848833",
+        "sameAs": [
+          "https://www.linkedin.com/in/elyor-web-developer/",
+          "https://github.com/ElyorTuyliyev",
+          "https://www.instagram.com/stackmaster_el/",
+          "https://t.me/+998884848833"
+        ],
+        "knowsAbout": [
+          "React",
+          "TypeScript",
+          "JavaScript",
+          "Next.js",
+          "Tailwind CSS",
+          "Frontend Development"
+        ]
+      }
+    </script>
   </head>
 
   <body>
